src/css/style.css
/* ... */
.long-text{
	.text-align-center{
		@apply text-center;
	}
	.text-align-right{
		@apply text-right;
	}
	a{
		@apply underline;
		&:hover,&:focus{
			@aaply no-underline;
		}
	}
}
.gradient-ex{
	min-height: 200px;
}
.gradient-wtf{
	background-image: linear-gradient(to bottom, #e4f0e2 , #ffffff);
}
.visually-hidden{
	position: absolute;
	left: -900vw;
	top: 0;
	font-size: 1px;
	opacity: .1;
}

.md-ml-wipe{
	@media all and (min-width: theme(screens.md)){
		margin-left: 0 !important;
	}
}

@tailwind components;

/**
 * Here you would add any of your custom component classes; stuff that you'd
 * want loaded *before* the utilities so that the utilities could still
 * override them.
 *
 * Example:
 *
 * .btn { ... }
 * .form-input { ... }
 *
 * Or if using a preprocessor or `postcss-import`:
 *
 * @import "components/buttons";
 * @import "components/forms";
 */

/* BUTTON */
.btn{
	@apply bg-blue text-white tracking-wide uppercase px-6 py-4 font-header font-bold;
	&:hover,&:focus{
		@apply bg-grey-dark text-white;
	}
	&.btn-alt{
		@apply bg-green-dark;
		&:hover,&:focus{
			@apply text-white bg-grey-dark;
		}
	}
	&.btn-arrow{
		@apply inline-block relative pl-10 pr-4 py-3;
		height: 50px;
		margin-left: -25px;
		&:before{
			@apply absolute block top-0 w-0 h-0;
			content: '';
			right: -25px;
			-webkit-transform: rotate(0.05deg);
			-moz-transform: scale(1.1);
			transform: rotate(0.05deg);
			border-top: 25px double rgba(0,0,0,0);
			border-bottom: 25px double rgba(0,0,0,0);
			border-left: 25px solid theme(colors.blue.default);
		}
		&:after{
			@apply absolute block inset-0;
			content: '';
			width: 0;
			height: 0;
			-webkit-transform: rotate(0.05deg);
			-moz-transform: scale(1.1);
			transform: rotate(0.05deg);
			border-top: 25px double rgba(0,0,0,0);
			border-bottom: 25px double rgba(0,0,0,0);
			border-left: 25px solid theme(colors.grey.light);
		}
		&:hover,&:focus{
			&:before{
				border-left-color: theme(colors.grey.dark);
			}
		}
	}
	@media screen and (min-width: theme(screens.md)){
		@apply px-8;
	}
}

/* MAIN MENU LINKS */
.main-link{
	a{
		@apply border-b border-grey-mid text-black block px-6 py-4 tracking-wide leading-none text-20;
		&:hover,&:focus{
			@apply bg-white-blue;
		}
		&.active{
			@apply text-blue;
			&:hover,&:focus{
				@apply text-green-dark;
			}
		}
	}
	&:last-child a{
		border-bottom: 0;
	}
	@media screen and (min-width: theme(screens.md)){
		a{
			@apply border-0 px-3 relative;
			&:hover,&:focus{
				@apply bg-transparent text-green-dark;
			}
		}
		&:not(:last-child) a{
			&:after{
				content: '';
				display: block;
				height: 24px;
				width: 2px;
				background-color: theme(colors.grey.mid);
				position: absolute;
				right: 0;
				top: calc(50% - 12px);
				-webkit-transform: rotate(20deg);
				-moz-transform: rotate(20deg);
				-ms-transform: rotate(20deg);
				transform: rotate(20deg);
			}
		}
	}
	@media screen and (min-width: theme(screens.lg)){
		a{
			@apply text-22;
		}
	}
}

.footer-menu-item{
	@apply text-16 inline;
	&:not(:last-child):after{
		content: '/';
		display: inline-block;
		padding: 0 10px 0 9px;
		color: theme(colors.black.default);
	}
}

/* CARD IMAGES */
.card-image{
	@apply relative overflow-hidden block;
	flex: 0 0 30%;
	min-height: 250px;
	&.card-small{
		flex: 0 0 127px;
		min-height: 236px;
	}
	& > div{
		height: 100%;
	}
}
.card-text{
	@apply flex flex-col justify-center py-4 px-6 text-left;
	&.card-small{
		@apply px-8;
	}
	@media all and (min-width: theme(screens.md)){
		&.card-small{
			@apply px-6;
		}
	}
}

/* PARAGRAPH ITEMS */
.paragraph-item{
	@apply mb-8;
	h2.h3{
		@apply mb-3 mx-auto text-center max-w-2xlHalf;
	}
	@media all and (min-width: theme(screens.lg)){
		@apply mb-12;
	}
}

/* FORM ELEMENTS */
.form-item{
	@apply mb-6 font-header;
	label{
		@apply font-bold text-20 mb-2;
	}
	&.form-text{
		input{
			@apply border border-grey-dark w-full px-2 py-3half leading-none;
		}
		textarea{
			@apply border border-grey-dark w-full px-2 py-3half;
		}
	}
	&.form-required{
		label:after{
			content: '*';
			@apply text-red text-base ml-1 relative;
			top: -4px;
		}
	}
}

/**
 * This injects all of Tailwind's utility classes, generated based on your
 * config file.
 *
 * If using `postcss-import`, use this import instead:
 *
 * @import "tailwindcss/utilities";
 */
@tailwind utilities;

/**
 * Here you would add any custom utilities you need that don't come out of the
 * box with Tailwind.
 *
 * Example :
 *
 * .bg-pattern-graph-paper { ... }
 * .skew-45 { ... }
 *
 * Or if using a preprocessor or `postcss-import`:
 *
 * @import "utilities/background-patterns";
 * @import "utilities/skew-transforms";
 */

/* HEADER */
.site-header{
	min-height: 150px;
	@media screen and (min-width: theme(screens.lg)){
		min-height: 164px;
	}
}

/* TOOLTIP */
.tippy-popper{
	max-width: calc(100% - 10px);
	margin-top: -10px;
	button{
		width: 132px;
		@media screen and (min-width: theme(screens.lg)){
			width: 150px;
		}
	}
}

/* ESCAPE ICON  */
.esc-position{
	top: calc(50% - 13px);
	right: 1rem;
	@media all and (min-width: theme(screens.md)){
		right: 1.5rem;
	}
}

/* TRANSLATE BUTTON */
.trans-button{
	padding: 12.5px 20px 12.5px 20px;
	@media all and (min-width: theme(screens.md)){
		padding: 9px 20px 4px;
	}
}

/* MOBILE MENU WRAPPER */
.m-menu-wrapper{
	top: 72px;
	-webkit-transition: -webkit-transform .3s ease;
  -moz-transition: -moz-transform .3s ease;
  -ms-transition: -ms-transform .3s ease;
  transition: transform .3s ease;
	&.open{
		@media screen and (max-width: theme(screens.md)){
			-webkit-transform: translate(0, 0%);
    	-moz-transform: translate(0, 0%);
   	 	-ms-transform: translate(0, 0%);
    	transform: translate(0, 0%);
  	}
	}
	&.closed{
		@media screen and (max-width: theme(screens.md)){
			-webkit-transform: translate(-150vw, 0%);
    	-moz-transform: translate(-150vw, 0%);
    	-ms-transform: translate(-150vw, 0%);
    	transform: translate(-150vw, 0%);
  	}
	}
}
/* ... */

